Fixes #2840  * Kuddos Juerd for patch  * Changed to "append" instead of prepend so that it is less visible / eye catching  * Changed color to standard grey & added tooltip for claririty / usability
git-svn-id: http://dev.piwik.org/svn/trunk@5784 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Live/templates/live.css
+++ b/plugins/Live/templates/live.css
@@ -86,3 +86,10 @@ ol.visitorLog li {
     font-size: 9pt;
     margin-right:2px;
 }
+.repeat { 
+    font-weight: bold; 
+    border: 1px solid #444444; 
+    border-radius: 3px 3px 3px 3px; 
+    padding: 2px; 
+}
+
